Bug 258056 - bluedevil: problems sending file from phone to pc.
Summary: bluedevil: problems sending file from phone to pc.
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-27 11:38 UTC by info
Modified: 2011-01-27 01:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
dbus-monitor 9500 (8.13 KB, text/plain)
2010-11-27 11:38 UTC, info
Details
dbus-monitor xperia (3.71 KB, text/plain)
2010-11-27 11:39 UTC, info
Details

Note You need to log in before you can comment on or make changes to this bug.
Description info 2010-11-27 11:38:12 UTC
Created attachment 53789 [details]
dbus-monitor 9500 

Version:           unspecified (using KDE 4.5.80) 
OS:                Linux

i'm not able to send file from phone to pc.
i can browse and send file from pc to phone.

i have two phones:
xperia x1 connect the pc, but the transfer doesn't start.
Nokia 9500 receive an Error.

i'm trying with latest git bluedevil/libbluedevil version.

Luca.  

Reproducible: Didn't try
Comment 1 info 2010-11-27 11:39:12 UTC
Created attachment 53791 [details]
dbus-monitor xperia
Comment 2 info 2010-11-27 12:08:25 UTC
bluez-pin-0.30-10mdv2010.1
bluez-firmware-1.2-6mdv2010.0
bluez-4.79-1mdv2011.0
libbluez3-4.79-1mdv2011.0
libopenobex1-1.5-4mdv2010.1
obex-data-server-0.4.5-1mdv2010.1
Comment 3 Alex Fiestas 2010-11-27 20:56:53 UTC
BlueDevil version?
Comment 4 info 2010-11-27 21:53:44 UTC
i download bluedevil from git.kde.org yesterday so i think 1.0.1.
Comment 5 nola mike 2010-12-06 20:28:36 UTC
I'm having the same issue.  Not sure how to find my bluedevil version number; under "about bluetooth devices" in KDE control panel, the version is 1.0.  Using standard Ubuntu Maverick packages.  I'm able to receive files using kbluetooth, and blueman.  I'm able to send files to the phone using bluedevil.  When sending from phone, I almost immediately get a "failed to find service" error.
Comment 6 christian 2010-12-11 06:51:41 UTC
i'm having the same issue like nola mike.
My linuxbox:
mandriva 2010.1 kde4.5.4 64bit bluedevil 1.0
Comment 7 jms 2011-01-08 09:31:12 UTC
confirm
sending files from phone to computer doesn't work
gentoo amd64

bluedevil-1.0
libbluedevil-1.8
bluez-4.82 
kde 4.5.4
openobex-1.5
obexftp-0.23-r1
obex-data-server-0.4.5
obexd-0.37
obexfs-0.12
sending files from phone to computer doesn't work/
it works with kbluetooth-0.4.2.
.kde4/share/config/bluedevilreceiverrc is empty
.kde4/share/config/bluedevilglobalrc is empty

extra
using
~ $ bluedevil-authorize 01:02:03:04:05:06 (then if press trust and accepted )
Trusted 
ASSERT failure in QList<T>::operator[]: "index out of range", file /usr/include/qt4/QtCore/qlist.h, line 447
Aborted

phone:Nokia 5130c-2
hcitool info 01:02:03:04:05:06 
Requesting information ...
        BD Address:  34:7E:39:7A:18:05
        OUI Company: Nokia Danmark A/S (34-7E-39)
        Device Name: Nokia 5130c-2
        LMP Version: 2.0 (0x3) LMP Subversion: 0x2222
        Manufacturer: Broadcom Corporation (15)
        Features: 0xbf 0xee 0x0f 0xce 0x98 0x39 0x00 0x00
                <3-slot packets> <5-slot packets> <encryption> <slot offset> 
                <timing accuracy> <role switch> <sniff mode> <RSSI> 
                <channel quality> <SCO link> <HV3 packets> <u-law log> 
                <A-law log> <CVSD> <paging scheme> <power control> 
                <transparent SCO> <EDR ACL 2 Mbps> <EDR ACL 3 Mbps> 
                <enhanced iscan> <inquiry with RSSI> <extended SCO> 
                <AFH cap. slave> <AFH class. slave> <3-slot EDR ACL> 
                <5-slot EDR ACL> <AFH cap. master> <AFH class. master> 
                <EDR eSCO 2 Mbps>
Comment 8 Alex Fiestas 2011-01-14 05:00:36 UTC
(In reply to comment #2)
> bluez-pin-0.30-10mdv2010.1
> bluez-firmware-1.2-6mdv2010.0
> bluez-4.79-1mdv2011.0
> libbluez3-4.79-1mdv2011.0
> libopenobex1-1.5-4mdv2010.1
> obex-data-server-0.4.5-1mdv2010.1

Can you receive files using Blueman or other software?
Comment 9 Alex Fiestas 2011-01-14 05:03:06 UTC
1-is bluedevil-helper running?
2-What this command return? (true or false)
qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning
3-Can anyone with this issue connect to IRC (freenode) to do some testing?
Comment 10 nola mike 2011-01-14 06:35:14 UTC
"I'm able to receive files using
kbluetooth, and blueman.  I'm able to send files to the phone using bluedevil. 
When sending from phone, I almost immediately get a "failed to find service"
error."

bluedevil-helper is running.  i'll check that command when i get back to my home pc.
Comment 11 Alex Fiestas 2011-01-14 06:58:27 UTC
(In reply to comment #10)
> "I'm able to receive files using
> kbluetooth, and blueman.  I'm able to send files to the phone using bluedevil. 
> When sending from phone, I almost immediately get a "failed to find service"
> error."
> 
> bluedevil-helper is running.  i'll check that command when i get back to my
> home pc.

Please, check everything again once you're at home, I want to be sure that this is not an obex-data-server issue.

Thanks.
Comment 12 info 2011-01-14 09:56:16 UTC
this is my new situation:

rpm -aq | grep blue
libbluedevil1-1.8.1-0.1mdv2010.2
bluez-4.64-1mdv2010.1
python-blueman-1.21-1mdv2010.1
bluez-pin-0.30-10mdv2010.1
libbluez3-4.64-1mdv2010.1
bluedevil-1.0.1-1mdv2010.2
bluez-firmware-1.2-6mdv2010.0

rpm -aq | grep obex
gvfs-obexftp-1.6.1-2mdv2010.1
libopenobex1-1.5-4mdv2010.1
obex-data-server-0.4.5-1mdv2010.1

rpm -aq | grep kernel
kernel-server-2.6.33.7-2mnb-1-1mnb2

with blueman i can send/receive from/to pc/phone
i can browse devices

with bluedevil i can send file from phone to pc
i can browse devices
i'm not able to send file from pc to phone

bluedevil-helper is nunning
qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning
true
Comment 13 Alex Fiestas 2011-01-14 12:31:09 UTC
(In reply to comment #12)
> this is my new situation:
> 
> rpm -aq | grep blue
> libbluedevil1-1.8.1-0.1mdv2010.2
> bluez-4.64-1mdv2010.1
> python-blueman-1.21-1mdv2010.1
> bluez-pin-0.30-10mdv2010.1
> libbluez3-4.64-1mdv2010.1
> bluedevil-1.0.1-1mdv2010.2
> bluez-firmware-1.2-6mdv2010.0
> 
> rpm -aq | grep obex
> gvfs-obexftp-1.6.1-2mdv2010.1
> libopenobex1-1.5-4mdv2010.1
> obex-data-server-0.4.5-1mdv2010.1
> 
> rpm -aq | grep kernel
> kernel-server-2.6.33.7-2mnb-1-1mnb2
> 
> with blueman i can send/receive from/to pc/phone
> i can browse devices
> 
> with bluedevil i can send file from phone to pc
> i can browse devices
> i'm not able to send file from pc to phone
> 
> bluedevil-helper is nunning
> qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning
> true
Can you open a new bug for this? this one is "From phone to PC" no the other way.

Thanks!
Comment 14 jms 2011-01-14 19:16:52 UTC
(In reply to comment #9)
> 1-is bluedevil-helper running?
ps -ef | grep blue
root      3299     1  0 12:53 ?        00:00:00 /usr/sbin/bluetoothd --udev
jms       4875     1  0 12:53 ?        00:00:00 /usr/bin/bluedevil-helper
jms       4881     1  0 12:53 ?        00:00:00 /usr/bin/bluedevil-monolithic


and for obex
ps -ef | grep obex
jms       4877     1  0 12:53 ?        00:00:00 /usr/bin/obex-data-server --no-daemon 


> 2-What this command return? (true or false)
> qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning
qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning
true

> 3-Can anyone with this issue connect to IRC (freenode) to do some testing?


maybe this bug status can be changed to confirmed?
Comment 15 Kai Uwe Broulik 2011-01-20 14:04:38 UTC
Same for me here. I can send files from my notebook the the Galaxy S fine but sending files from my Samsung Galaxy S to the notebook always failes no matter if I trust it, link it, whatever. The smartphone always states “the remote client refused a connection” but there is no notification what-so-ever that there is someone willing to send a file, although it is enabled in notification settings.
Comment 16 Lukasz Masko 2011-01-20 15:55:55 UTC
Ive just installed bluedevil 1.0.1 with libbluedevil 1.8 and both sending and receiving work for me with my LG GT500. Haven't tried with something else (I have no othe phone in reach).
Comment 17 Alex Fiestas 2011-01-20 16:51:48 UTC
I'm going to close this bug because the original topic was:

"Problems sending file from phone to pc" by info@barradev.it and now:
(In reply to comment #12)
> with bluedevil i can send file from phone to pc
> i can browse devices
> i'm not able to send file from pc to phone

Which indicates that the original topic of this bug is now fixed.

I'm sure that the "PC-->Phone" issue will be fixed if obexd-client is installed.

Then for everyone else having this problem (Phone--->PC) can you open a new bug after you check that:

1-You're using at least BlueDevil 1.0.1
2-You have obex-data-server installed.

And if you do open a new bug, please include:
1-is bluedevil-helper running?
2-What this command return? (true or false)
qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning

Thanks!
Comment 18 Kai Uwe Broulik 2011-01-20 17:06:42 UTC
I‘ll just have to wait for Bluedevil 1.1, maybe this solves a huge amount of issues :)
Comment 19 Alex Fiestas 2011-01-20 17:08:26 UTC
(In reply to comment #18)
> I‘ll just have to wait for Bluedevil 1.1, maybe this solves a huge amount of
> issues :)

1.0.1 should work "just fine" and 1.0.2 should have "no issues" so if you're using 1.0.1 and you have problems receiving files, please open a new bug.
Comment 20 christian 2011-01-20 18:06:07 UTC
I still have this issue: i can't to send from phone to pc (from pc to phone it's ok)
1.i have bluedevil-helper runnig
2.qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning
true

3. i have the latest bluedevil 1.0.1
Comment 21 Alex Fiestas 2011-01-20 18:23:43 UTC
(In reply to comment #20)
> I still have this issue: i can't to send from phone to pc (from pc to phone
> it's ok)
> 1.i have bluedevil-helper runnig
> 2.qdbus org.kde.BlueDevil.Service /Service org.kde.BlueDevil.Service.isRunning
> true
> 
> 3. i have the latest bluedevil 1.0.1
Execute this command with a clean session (reboot and execute it)

qdbus org.openobex /org/openobex org.openobex.Manager.GetServerList
Comment 22 Alex Fiestas 2011-01-20 19:50:22 UTC
Git commit 8cbf13f348a56de068ef9ad836b05155afa07ae3 by Alex Fiestas
Pushed by afiestas into branch stable

If org.openobex is unregistered, restart the server.

Seems that obex-data-server is crashing a lot for some people
(including me) so we have to handle it properly.

BUG: 258056
FIXED-IN: 1.0.2

M  +16   -0    src/daemon/helpers/filereceiver/service.cpp     
M  +5    -1    src/daemon/helpers/filereceiver/service.h     

http://commits.kde.org/983d372e/8cbf13f348a56de068ef9ad836b05155afa07ae3
Comment 23 Alex Fiestas 2011-01-21 00:15:45 UTC
Git commit 12294521321a4872630d52827e001b26bfffa9f1 by Alex Fiestas
Pushed by afiestas into branch master

If org.openobex is unregistered, restart the server.

Seems that obex-data-server is crashing a lot for some people
(including me) so we have to handle it properly.

BUG: 258056
FIXED-IN: 1.0.2

M  +16   -0    src/daemon/helpers/filereceiver/service.cpp     
M  +5    -1    src/daemon/helpers/filereceiver/service.h     

http://commits.kde.org/983d372e/12294521321a4872630d52827e001b26bfffa9f1
Comment 24 christian 2011-01-21 06:00:24 UTC
qdbus org.openobex /org/openobex org.openobex.Manager.GetServerList
/org/openobex/server0
Comment 25 nola mike 2011-01-26 23:08:17 UTC
1-is bluedevil-helper running?

yes

2-What this command return? (true or false)

true.

3.  qdbus org.openobex /org/openobex org.openobex.Manager.GetServerList

/org/openobex/server0 


i'm running 1.0~rc4-0ubuntu2.1 from stock ubuntu 10.10 repos--is there a ppa or other repository for a more recent version?
Comment 26 Alex Fiestas 2011-01-27 01:51:51 UTC
I don't know if there is a ppa for bluedevil, but rc4 had issues with the file receiving so try to get an updated version.