If org.openobex is unregistered, restart the server.

Seems that obex-data-server is crashing a lot for some people
(including me) so we have to handle it properly.

BUG: 258056
FIXED-IN: 1.0.2